test/error/MethodOverridePrivate.ci
abstract class Base
{
	internal abstract void Foo();
}

class Derived : Base
{
	override void Foo() //ERROR: override method cannot be private
	{
	}
}
